Acerto no postgres aws parte 2